--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,10 @@ fastapi==0.55.1
 h11==0.9.0
 httptools==0.1.1
 pkg-resources==0.0.0
+psycopg2-binary==2.8.5
 pycodestyle==2.6.0
 pydantic==1.5.1
+SQLAlchemy==1.3.17
 starlette==0.13.2
 toml==0.10.1
 uvicorn==0.11.5
