--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
 astroid==2.4.1
 attrs==19.3.0
 autopep8==1.5.3
+certifi==2020.4.5.2
+chardet==3.0.4
 click==7.1.2
 fastapi==0.55.1
+get==2019.4.13
 gunicorn==20.0.4
 h11==0.9.0
 httptools==0.1.1
+idna==2.9
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
@@ -13,17 +17,23 @@ more-itertools==8.3.0
 packaging==20.4
 pkg-resources==0.0.0
 pluggy==0.13.1
+post==2019.4.13
 psycopg2-binary==2.8.5
+public==2019.4.13
 py==1.8.1
 pycodestyle==2.6.0
 pydantic==1.5.1
 pylint==2.5.2
 pyparsing==2.4.7
 pytest==5.4.3
+query-string==2019.4.13
+request==2019.4.13
+requests==2.23.0
 six==1.15.0
 SQLAlchemy==1.3.17
 starlette==0.13.2
 toml==0.10.1
+urllib3==1.25.9
 uvicorn==0.11.5
 uvloop==0.14.0
 wcwidth==0.2.4
