--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ idna==2.9
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
+mock==4.0.2
 more-itertools==8.3.0
 packaging==20.4
 pkg-resources==0.0.0
